# kv-gauntlet

./: .gitignore  Cargo.toml  Config.toml  README.md
dataset/: fetch_dataset.py
docker/antidote/: docker-compose.yml
docker/cassandra/: docker-compose.yml
docker/etcd/: docker-compose.yml
scripts/: analyze.py
scripts/antidote/: kill_node.sh  partition_node.sh  restore.sh  start.sh  upgraded_restore_prototype.sh  upgraded_start_prototype.sh
scripts/cassandra/: kill_two_nodes.sh  partition_node.sh  restore.sh  start.sh  stop.sh
scripts/etcd/: kill_node.sh  partition_node.sh  restore.sh  start.sh  stop.sh
src/: Config.rs  Dataset.rs  Main.rs  Metrics.rs  Runner.rs  Workload.rs
src/docker/antidote/: docker-compose.yml
src/docker/cassandra/: docker-compose.yml
src/scripts/antidote/: start.sh  stop.sh
src/scripts/cassandra/: kill_node.sh
src/scripts/etcd/: start.sh
src/systems/: Antidote.rs  Cassandra.rs  Etcd.rs  Mod.rs
